# ska

./: .coveragerc  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .pth  .pylintrc  .readthedocs.yaml  .secrets.baseline  .travis.yml  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE_GPL2.0.txt  LICENSE_LGPL_2.1.txt  MANIFEST.in  Makefile  README.rst  SECURITY.rst  TODOS.rst  builddocs.sh  conftest.py  install.sh  make_messages.sh  monkeytype_config.py  mypy.ini  pyproject.toml  pytest.ini  readme.rst  rebuild_docs.sh  runtests.py  setup.py  shell.py  test.sh  todos.rst  tox.ini  uninstall.sh
.github/workflows/: test.yml
codebin/: nested_structures.md
docs/: Makefile  changelog.rst  conf.py  conf.py.distrib  documentation.rst  documentation.rst.distrib  index.rst  index.rst.distrib  index.rst.orig  llms.rst  make.bat  package.rst  ska.contrib.django.rst  ska.contrib.django.ska.backends.rst  ska.contrib.django.ska.integration.drf.permissions.rst  ska.contrib.django.ska.integration.drf.rst  ska.contrib.django.ska.integration.drf.urls.rst  ska.contrib.django.ska.integration.drf.views.rst  ska.contrib.django.ska.integration.rst  ska.contrib.django.ska.management.commands.rst  ska.contrib.django.ska.management.rst  ska.contrib.django.ska.migrations.rst  ska.contrib.django.ska.rst  ska.contrib.django.ska.templatetags.rst  ska.contrib.django.ska.tests.rst  ska.contrib.django.ska.urls.rst  ska.contrib.django.ska.views.rst  ska.contrib.rst  ska.rst  ska.signatures.rst  ska.tests.rst
example/: README.rst  ska_example_app_installer.sh
example/example/: local_settings.example  local_settings.py  settings.py  urls.py
example/example/foo/: models.py  urls.py  views.py
example/example/foo/management/commands/: foo_create_test_data.py
example/example/foo/templates/foo/: authenticate.html  browse.html  detail.html
example/example/settings/: base.py  local_settings.example  local_settings.py
example/example/templates/: base.html  home.html
examples/: README.rst  basic.py  ska_example_app_installer.sh
examples/requirements/: common.txt  constance.txt  constance_django_1_9.txt  constance_django_2_2.in  constance_django_3_0.in  constance_django_4_1.in.old  debug.in  debug.txt  deployment.txt  dev.in  dev.txt  django_1_10.txt  django_1_11.txt  django_1_5.txt  django_1_6.txt  django_1_7.txt  django_1_8.txt  django_1_9.txt  django_2_0.txt  django_2_1.txt  django_2_2.in  django_2_2.txt  django_3_0.in  django_3_0.txt  django_3_0.txt.old  django_3_1.in  django_3_1.txt  django_3_1.txt.old  django_3_2.in  django_3_2.txt  django_3_2.txt.old  django_4_1.in  django_4_1.txt  django_4_1.txt.old  django_4_2.in  django_4_2.txt  django_5_1.in  django_5_1.txt  django_5_2.in  django_5_2.txt  (+16 more)
examples/simple/: constance_urls.py  urls.py
examples/simple/factories/: __init__.py  _auth_group.py  _auth_user.py  _constance_constance.py  _factory_faker.py  _foo_fooitem.py  auth_group.py  auth_user.py  constance_constance.py  factory_faker.py  foo_fooitem.py
examples/simple/foo/: admin.py  models.py  serializers.py  ska_callbacks.py  urls.py  views.py  viewsets.py
examples/simple/foo/management/commands/: foo_create_test_data.py
examples/simple/foo/static/css/: example.css
examples/simple/foo/templates/foo/: authenticate.html  browse.html  constance_templatetags.html  drf.html  drf_permissions.html  logged_in.html  templatetags.html
examples/simple/jsonfield2_addons/: forms.py
examples/simple/settings/: base.py  constance_settings.py  core.py  docs.py  local_settings.example  testing.py
examples/simple/templates/: base.html  home.html
scripts/: build_docs.sh  check_manifest.sh  clean_up.sh  compile_requirements.sh  detect-secrets-create-baseline.sh  install.sh  make_messages.sh  make_pypi_long_description.sh  make_release.sh  prepare_docs.sh  pycodestyle.sh  pycodestyle_example.sh  pylint.sh  rebuild_docs.sh  reinstall.sh  restview.sh  shell.sh  test.sh  uninstall.sh  upgrade_requirements.sh
src/ska/: __init__.py  base.py  defaults.py  error_codes.py  exceptions.py  generate_signed_url.py  gettext.py  helpers.py  shortcuts.py  tests.py  utils.py  versus.py
src/ska/contrib/django/ska/: README.rst  __init__.py  admin.py  apps.py  backends.py  conf.py  decorators.py  defaults.py  exceptions.py  http.py  models.py  requirements.txt  settings.py  tests.py  urls.py  utils.py  views.py
src/ska/contrib/django/ska/backends/: __init__.py  base.py  constance_backend.py  default_backends.py
src/ska/contrib/django/ska/integration/constance_integration/templatetags/: ska_constance_tags.py
src/ska/contrib/django/ska/integration/drf/permissions/: __init__.py  base.py  constance_permissions.py  default_permissions.py
src/ska/contrib/django/ska/integration/drf/urls/: jwt_token.py
src/ska/contrib/django/ska/integration/drf/views/: __init__.py  jwt_token.py
src/ska/contrib/django/ska/locale/hy/LC_MESSAGES/: django.mo  django.po
src/ska/contrib/django/ska/locale/nl/LC_MESSAGES/: django.mo  django.po
src/ska/contrib/django/ska/management/commands/: ska_purge_stored_signature_data.py
src/ska/contrib/django/ska/migrations/: 0001_initial.py
src/ska/contrib/django/ska/templates/ska/: 401.html
src/ska/contrib/django/ska/templatetags/: ska_constance_tags.py  ska_tags.py
src/ska/contrib/django/ska/tests/: __init__.py  helpers.py  test_constance_authentication_backend.py  test_constance_authentication_backend_.py  test_decorators.py  test_default_authentication_backend.py  test_django_ska.py  test_django_ska_constance.py  test_drf_integration_permissions.py  test_drf_integration_view_jwt_token.py  test_templatetags.py
src/ska/contrib/django/ska/urls/: __init__.py  constance_urls.py  default_urls.py
src/ska/contrib/django/ska/views/: __init__.py  constance_views.py  default_views.py
src/ska/signatures/: __init__.py  hmac_md5.py  hmac_sha1.py  hmac_sha224.py  hmac_sha256.py  hmac_sha384.py  hmac_sha512.py
src/ska/tests/: __init__.py  base.py  test_commands.py  test_core.py  test_integration.py  test_versus.py
(+2 files in other folders)
